Fixed spacing between passage lines. On lines without an input box the lines were too close together.

--- a/bootstrap/app/assets/css/docs.css
+++ b/bootstrap/app/assets/css/docs.css
@@ -580,3 +580,8 @@ form.search {
     margin-bottom: 8px;
     border-bottom: 1px dashed #ddd;
 }
+
+.passage span {
+    margin-bottom: 9px;
+    display: inline-block;
+}
